--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,7 @@
 					</td>
 				</tr>
 			</table>
-			<p class="error">{{login_error}}</p>
+			<p class="error">{{error}}</p>
 			<input type="submit">
 		</form>
 	</body>
